<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/gradient_background">


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="4dp"
            android:hint="@string/name_min_3_characters"
            android:inputType="text"
            android:maxLength="20"
            android:padding="12dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="4dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:padding="12dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="4dp"
            android:hint="@string/password_min_6"
            android:inputType="textPassword"
            android:maxLength="15"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextCnfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="4dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="8"
            android:padding="12dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/register"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textAllCaps="true"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:fontFamily="sans-serif"/>

    </LinearLayout>
</RelativeLayout>