<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="198dp"
        android:layout_height="195dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/agricare_logo" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAppLogo"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="6dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserName"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="18dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/etPassword"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corners"/>

    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>