<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtAboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/About_title"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="34sp"
            android:layout_alignParentStart="true" />

<!--        <com.synnapps.carouselview.CarouselView-->
<!--            android:id="@+id/carouselView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="200dp"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            app:fillColor="#FFFFFF"-->
<!--            app:pageColor="#000000"-->
<!--            app:radius="6dp"-->
<!--            app:slideInterval="3000"-->
<!--            app:strokeColor="#FF777777"-->
<!--            app:strokeWidth="1dp"/>-->

        <ImageView
            android:id="@+id/imgVesitCampus"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:src="@drawable/vesit_campus1"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/txtAboutContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/About_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtAboutContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAboutContent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/About_content2"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/imgDiseaseCollage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/txtAboutContent2"
            android:src="@drawable/disease_collage"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="Diseases" />

        <TextView
            android:id="@+id/txtAboutContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/imgDiseaseCollage"
            android:text="@string/About_content3"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"/>
    </LinearLayout>

</ScrollView>